# cargo-bake

./: Cargo.toml
src/: abi.rs  main.rs
