[package]
name = "cargo-bake"
version = "0.1.0"
authors = ["zer0 <matteo@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
proc-macro2 = "1.0.10"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["full", "extra-traits"] }
lazy_static = "1.4.0"
termcolor = "1.1.0"
atty = "0.2.14"
bytehash = "0.3.0"
cargo_metadata = "0.9.1"
dusk-abi = { git = "https://github.com/dusk-network/dusk-abi" }
